force-app/main/default/objects/Data_Quality_Metrics__c/Data_Quality_Metrics__c.object-meta.xml
<CustomObject>
    <label>Data Quality Metrics</label>
    <nameField>
        <label>Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Quality Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>