force-app/main/default/objects/Data_Quality_Metrics__c/fields/Cross_Channel_Matches__c.field-meta.xml
<CustomField>
    <fullName>Cross_Channel_Matches__c</fullName>
    <label>Cross Channel Matches</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>