force-app/main/default/objects/Data_Quality_Metrics__c/fields/Data_Completeness__c.field-meta.xml
<CustomField>
    <fullName>Data_Completeness__c</fullName>
    <label>Data Completeness</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>