force-app/main/default/objects/Data_Quality_Metrics__c/fields/Error_Rate__c.field-meta.xml
<CustomField>
    <fullName>Error_Rate__c</fullName>
    <label>Error Rate</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>