force-app/main/default/objects/Data_Quality_Metrics__c/fields/High_Confidence_Matches__c.field-meta.xml
<CustomField>
    <fullName>High_Confidence_Matches__c</fullName>
    <label>High Confidence Matches</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>