force-app/main/default/objects/Data_Quality_Metrics__c/fields/Identity_Match_Rate__c.field-meta.xml
<CustomField>
    <fullName>Identity_Match_Rate__c</fullName>
    <label>Identity Match Rate</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>