force-app/main/default/objects/Data_Quality_Metrics__c/fields/Invalid_Stage_Detections__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Stage_Detections__c</fullName>
    <description>Count of invalid stage detections found during Markov Chain attribution processing. Tracks cases where the stage detection algorithm produced invalid or unexpected stage classifications that required correction or fallback handling.</description>
    <inlineHelpText>Number of invalid stage detections identified during processing. Lower values indicate better stage detection quality.</inlineHelpText>
    <label>Invalid Stage Detections</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>