force-app/main/default/objects/Data_Quality_Metrics__c/fields/Metric_Date__c.field-meta.xml
<CustomField>
    <fullName>Metric_Date__c</fullName>
    <label>Metric Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>