force-app/main/default/objects/Data_Quality_Metrics__c/fields/Stage_Detection_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Stage_Detection_Accuracy__c</fullName>
    <description>Percentage accuracy of stage detection algorithm in Markov Chain attribution model. Measures how accurately the system detects customer journey stages (Awareness, Interest, Consideration, Conversion, Retention) based on touchpoint context and sequence.</description>
    <inlineHelpText>Stage detection accuracy percentage calculated during Markov Chain attribution processing. Higher values indicate more accurate stage classification.</inlineHelpText>
    <label>Stage Detection Accuracy (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>