force-app/main/default/objects/Data_Quality_Metrics__c/fields/Total_Touchpoints__c.field-meta.xml
<CustomField>
    <fullName>Total_Touchpoints__c</fullName>
    <label>Total Touchpoints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>